fix(styles/style.css) fixed underlines on dark mode links (hopefully)

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,9 @@
 *:not(.nav-style *) {
   box-sizing: border-box;
 }
-
+.link-dark:not(.skip-link):not(.persistence-link) {
+  text-decoration: none !important;
+ } 
 /* Prevent the theme logic from ever touching regular page links */
 a:not(.persistence-link):not(.skip-link):not(.link-dark) {
   display: inline-block !important;
